25-gc-framework/02 CollectedHeap+分配路径完结(122/152,25 域 2/6,第 6 批 7/8)
正文 199 行+大纲回填 ⚠️ 3 块+15-c2/07 链接文本对齐+25-03 悬念标题对齐(WeakReference→SoftReference)。

深审 2 轮修正(大纲漂移 12+ 处含 3 处编造):
- 'tlab.cpp/tlab.hpp'不存在: 真实 threadLocalAllocBuffer.hpp/cpp/inline.hpp;allocate :34-54 bump;compute_size :56-74
- 'allocate_from_tlab(collectedHeap.inline.hpp:60-150)'编造: inline.hpp 只有 69 行(align_allocation_or_fail);分配入口=MemAllocator(memAllocator.cpp:362-371 三级: tlab.allocate→allocate_inside_tlab_slow(:297: free>refill_waste_limit 保留 TLAB/否则 compute_size+allocate_new_tlab :332)→allocate_outside_tlab :270)
- 'TLAB ~512KB-2MB'臆测: 实测 32MB 堆 286KB(gc+tlab=trace);desired_size GC 后 resize(:151-167)按分配分数重算(非'运行时漂移')
- 'Constructor 设 Universe::_collectedHeap'错: universe.cpp:766 initialize_heap 显式 create_heap;CollectedHeap 构造 :196-208
- 'safepoint_synchronize_begin/end'编造(不在 CollectedHeap)
- '_g1_evacuation_pause'名错: 真实 _g1_inc_collection_pause(gcCause.hpp:80)
- 'region 45%'无据: 真实阈值 region_size/2(g1CollectedHeap.hpp:1212-1224)
- '~10 cycles/~6 cycles/98% hit rate'无据删
- 分配链补全: new_instance_C(opto/runtime.cpp:196)→InstanceKlass::allocate_instance(:1241)→obj_allocate(:301)→ObjAllocator(memAllocator.hpp:81)
- 实证: gc+tlab=trace(compute_size/desired_size 286KB/refill waste 4584B);UseTLAB 对照 1.35s→8s(6 倍);GC cause 括号(Evacuation/Humongous/Diagnostic Command/OOM 链);素材 25-gc-heap-alloc-demo.txt